# Snapchat-Downloader-Memories

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/: config.py  downloader.py  models.py  parser.py  utils.py  zip_processor.py
